Test now shows progress

--- a/UI/Pages/Test.xaml
+++ b/UI/Pages/Test.xaml
@@ -2,7 +2,6 @@
     x:Class="WordTes.UI.Pages.Test"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:src="using:WordTes.UI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:WordTes.UI.Models"
@@ -23,7 +22,7 @@
 
 
             <TextBlock Grid.Row="0"
-                   Text="Let the Test begin!" 
+                   Text="{Binding Progress }" 
                    Style="{StaticResource HeaderTextBlockStyle}"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center" />
