--- a/UI/Pages/Test.xaml
+++ b/UI/Pages/Test.xaml
@@ -33,8 +33,8 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition Height="20*"/>
+                    <RowDefinition Height="80*"/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="{Binding Path=CurrentWord, Mode=OneWay}"
                            HorizontalAlignment="Center"
