--- a/UI/Pages/MainPage.xaml
+++ b/UI/Pages/MainPage.xaml
@@ -19,11 +19,9 @@
             </Grid.ColumnDefinitions>
             <Button 
                 Grid.Column="1" 
-                Height="75" 
-                Width="200"
-                HorizontalAlignment="Center" 
-                VerticalAlignment="Center" Click="Button_Click">
-                Start
+                Style="{StaticResource RoundButtonStyle}"
+                Click="Button_Click">
+                <SymbolIcon Symbol="Forward" />
             </Button>
         </Grid>
     </Grid>
