--- a/UI/Pages/Test.xaml
+++ b/UI/Pages/Test.xaml
@@ -9,6 +9,7 @@
 
     <Page.Resources>
         <models:TestPageModel x:Key="TestModel" />
+        <models:BoolToVisibilityConverter x:Key="BoolToVisibility" />
     </Page.Resources>
 
     <Grid>
@@ -29,12 +30,14 @@
 
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="4*" />
+                    <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="20*"/>
-                    <RowDefinition Height="80*"/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="6*"/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="{Binding Path=CurrentWord, Mode=OneWay}"
                            HorizontalAlignment="Center"
@@ -45,23 +48,41 @@
                 <TextBox Grid.Column="1"
                          Grid.Row="0"
                          Text="{Binding Path=CurrentTranslation, Mode=TwoWay}"/>
+                <Button Command="{Binding Path=CheckCommand}"
+                        Style="{StaticResource RoundButtonStyle}"
+                        Grid.Row="0"
+                        Grid.Column="2">
+                    <SymbolIcon Symbol="{Binding CheckButtonSymbol}" />
+                </Button>
+                <TextBlock 
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Text="{Binding Path=CorrectAnswer}"
+                    Style="{StaticResource HeaderTextBlockStyle}"
+                    Visibility="{Binding Path=ShowCorrectAnswer, 
+                                 Converter={StaticResource BoolToVisibility} }" />
+
+                <Button 
+                    Visibility="{Binding Path=ShowCorrectAnswerButton, 
+                                 Converter={StaticResource BoolToVisibility}}"
+                    Command="{Binding Path=ShowAnswerCommand}"
+                    Style="{StaticResource RoundButtonStyle}"
+                    Grid.Row="1"
+                    Grid.Column="2">
+                    <SymbolIcon Symbol="Find" />
+                </Button>
                 <TextBlock Text="{Binding Result.Message, Mode=OneWay}"
                            Foreground="{Binding Result.Color}"
-                           Grid.Row="1"
-                           Grid.ColumnSpan="2"
+                           Grid.Row="2"
+                           Grid.ColumnSpan="3"
                            Grid.Column="0"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Style="{StaticResource HeaderTextBlockStyle}" />
             </Grid>
-            <Button Content="{Binding Path=CheckButtonText}"
-                    Command="{Binding Path=CheckCommand}"
-                    Grid.Row="2"
-                    Grid.Column="0"
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch"
-                    Margin="10"/>
         </Grid>
-            
+
     </Grid>
 </Page>
