--- a/UI/Pages/Test.xaml
+++ b/UI/Pages/Test.xaml
@@ -22,20 +22,32 @@
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="8*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <Button Style="{StaticResource RoundButtonStyle}">
+                <Button Style="{StaticResource RoundButtonStyle}"
+                        Command="{Binding Path=BackCommand}"
+                        Grid.Column="0"
+                        Grid.RowSpan="2">
                     <SymbolIcon Symbol="Back" />
                 </Button>
-                <TextBlock Grid.Row="0" 
+                <TextBlock Text="{Binding TestName, Mode=OneTime}" 
+                           Style="{StaticResource HeaderTextBlockStyle}"
                            Grid.Column="1"
-                           Text="{Binding Progress }" 
-                           Style="{StaticResource HeaderTextBlockStyle}" 
+                           Grid.Row="0"
                            HorizontalAlignment="Center"
-                           VerticalAlignment="Center" />
+                           VerticalAlignment="Center"/>
+                <TextBlock Grid.Column="1"
+                           Grid.Row="1"
+                           Text="{Binding Progress }" 
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Top" />
             </Grid>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
