--- a/UI/Assets/Styles.xaml
+++ b/UI/Assets/Styles.xaml
@@ -20,6 +20,8 @@
                                  StrokeThickness="1" 
                                  Fill="{TemplateBinding Background}" 
                                  Height="40" 
+                                 MinWidth="20"
+                                 MinHeight="20"
                                  Width="40" 
                                  Stroke="White">
                         </Ellipse>
@@ -226,7 +228,8 @@
                                 <TickBar x:Name="LeftTickBar" Grid.Row="0" Grid.Column="0" Fill="{ThemeResource SystemControlForegroundBaseMediumLowBrush}" HorizontalAlignment="Right" Margin="0,0,4,0" Grid.RowSpan="3" Visibility="Collapsed" Width="{ThemeResource SliderOutsideTickBarThemeHeight}"/>
                                 <TickBar x:Name="VerticalInlineTickBar" Grid.Row="0" Grid.Column="1" Fill="{ThemeResource SystemControlBackgroundAltHighBrush}" Grid.RowSpan="3" Visibility="Collapsed" Width="{ThemeResource SliderTrackThemeHeight}"/>
                                 <TickBar x:Name="RightTickBar" Grid.Row="0" Grid.Column="2" Fill="{ThemeResource SystemControlForegroundBaseMediumLowBrush}" HorizontalAlignment="Left" Margin="4,0,0,0" Grid.RowSpan="3" Visibility="Collapsed" Width="{ThemeResource SliderOutsideTickBarThemeHeight}"/>
-                                <Thumb x:Name="VerticalThumb" AutomationProperties.AccessibilityView="Raw" Background="{ThemeResource SystemControlForegroundAccentBrush}" Grid.ColumnSpan="3" Grid.Column="0" DataContext="{TemplateBinding Value}" Height="8" Grid.Row="1" Style="{StaticResource SliderThumbStyle}" Width="24"/>
+                                <Thumb x:Name="VerticalThumb" AutomationProperties.AccessibilityView="Raw"
+                                       Grid.ColumnSpan="3" Grid.Column="0" DataContext="{TemplateBinding Value}" Height="8" Grid.Row="1" Style="{StaticResource SliderThumbStyle}" Width="24"/>
                             </Grid>
                         </Grid>
                     </Grid>
