--- a/UI/Pages/Test.xaml
+++ b/UI/Pages/Test.xaml
@@ -16,61 +16,59 @@
     <Grid DataContext="{Binding Source={StaticResource TestModel}}">
         <Grid x:Name="MainGrid">
             <Grid.RowDefinitions>
-                <RowDefinition Height="20*" />
-                <RowDefinition Height="80*"/>
-                <RowDefinition Height="20*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            
+            <Grid Grid.Row="0" Background="#5555">
+                <Button Style="{StaticResource RoundButtonStyle}"
+                        Command="{Binding Path=BackCommand}"
+                        HorizontalAlignment="Left">
+                    <SymbolIcon Symbol="Back" />
+                </Button>
+            </Grid>
 
-            <Grid Grid.Row="0">
+            <Grid Grid.Row="1">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="8*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <Button Style="{StaticResource RoundButtonStyle}"
-                        Command="{Binding Path=BackCommand}"
-                        Grid.Column="0"
-                        Grid.RowSpan="2">
-                    <SymbolIcon Symbol="Back" />
-                </Button>
                 <TextBlock Text="{Binding TestName, Mode=OneTime}" 
                            Style="{StaticResource HeaderTextBlockStyle}"
-                           Grid.Column="1"
+                           TextWrapping="WrapWholeWords"
                            Grid.Row="0"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"/>
-                <TextBlock Grid.Column="1"
-                           Grid.Row="1"
+                <TextBlock Grid.Row="1"
                            Text="{Binding Progress }" 
                            HorizontalAlignment="Center"
                            VerticalAlignment="Top" />
             </Grid>
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="2" Margin="0,10,0,0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="4*" />
-                    <ColumnDefinition Width="4*"/>
-                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="2*"/>
-                    <RowDefinition Height="2*"/>
-                    <RowDefinition Height="6*"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <TextBlock Text="{Binding Path=CurrentWord, Mode=OneWay}"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
+                           TextWrapping="WrapWholeWords"
                            Grid.Column="0"
                            Grid.Row="0"
-                           Style="{StaticResource HeaderTextBlockStyle}"/>
+                           FontSize="18" />
                 <TextBox Grid.Column="1"
                          Grid.Row="0"
                          Text="{Binding Path=CurrentTranslation, Mode=TwoWay}"/>
                 <Button Command="{Binding Path=CheckCommand}"
                         Style="{StaticResource RoundButtonStyle}"
+                        Margin="10"
                         Grid.Row="0"
                         Grid.Column="2">
                     <SymbolIcon Symbol="{Binding CheckButtonSymbol}" />
@@ -81,17 +79,17 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Text="{Binding Path=CorrectAnswer}"
-                    Style="{StaticResource HeaderTextBlockStyle}"
+                    TextWrapping="WrapWholeWords"
+                    FontSize="18"
                     Visibility="{Binding Path=ShowCorrectAnswer, 
                                  Converter={StaticResource BoolToVisibility} }" />
-
-                <Button 
-                    Visibility="{Binding Path=ShowCorrectAnswerButton, 
+                <Button Visibility="{Binding Path=ShowCorrectAnswerButton, 
                                  Converter={StaticResource BoolToVisibility}}"
-                    Command="{Binding Path=ShowAnswerCommand}"
-                    Style="{StaticResource RoundButtonStyle}"
-                    Grid.Row="1"
-                    Grid.Column="2">
+                        Command="{Binding Path=ShowAnswerCommand}"
+                        Style="{StaticResource RoundButtonStyle}"
+                        Margin="10"
+                        Grid.Row="1"
+                        Grid.Column="2">
                     <SymbolIcon Symbol="Find" />
                 </Button>
                 <TextBlock Text="{Binding Result.Message, Mode=OneWay}"
@@ -101,7 +99,7 @@
                            Grid.Column="0"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
-                           Style="{StaticResource HeaderTextBlockStyle}" />
+                           FontSize="18" />
             </Grid>
         </Grid>
 
