--- a/UI/Pages/TestSetupPage.xaml
+++ b/UI/Pages/TestSetupPage.xaml
@@ -19,16 +19,16 @@
                 <EntranceThemeTransition/>
             </TransitionCollection>
         </Grid.ChildrenTransitions>
-        <Grid Margin="10">
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="90*"/>
-                <RowDefinition Height="10*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
+            <Grid Grid.Row="0" Background="#5555" Padding="0,0,0,5">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="95*"/>
-                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -51,6 +51,7 @@
                     <SymbolIcon Symbol="Delete"/>
                 </Button>
                 <TextBox Grid.Row="1" 
+                         Margin="5"
                          Grid.Column="0"
                          Text="{Binding TestName, Mode=TwoWay}"
                          HorizontalAlignment="Stretch"
@@ -61,32 +62,42 @@
                                       Converter={StaticResource BoolToVisibility}}" />
             </Grid>
 
-            <ScrollViewer HorizontalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,0,0,10">
+            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollMode="Disabled" Grid.Row="1" Margin="0,0,0,10">
                 <ItemsControl ItemsSource="{ Binding Path=Items, Mode=TwoWay }" >
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Grid Margin="10,25,15,10">
+
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="45*"/>
-                                    <ColumnDefinition Width="45*"/>
-                                    <ColumnDefinition Width="10*"/>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="1*"/>
                                 </Grid.ColumnDefinitions>
+
                                 <TextBox Text="{Binding Item.Word, Mode=TwoWay}"  
-                                         PlaceholderText="Word" 
-                                         services:FocusService.IsFocused="{Binding Path=Focus}"/>
-                                <TextBox Grid.Column="1" 
-                                         PlaceholderText="Translation"
-                                         Text="{Binding Item.Translation, Mode=TwoWay}" />
-                                <StackPanel Grid.Column="2" 
-                                            Orientation="Horizontal" >
+                                             PlaceholderText="Word"
+                                             Grid.Column="0"
+                                             HorizontalAlignment="Stretch"
+                                             services:FocusService.IsFocused="{Binding Path=Focus}"/>
+                                <Grid HorizontalAlignment="Stretch"
+                                      Grid.Column="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox  PlaceholderText="Translation"
+                                                  HorizontalAlignment="Stretch"
+                                                  Text="{Binding Item.Translation, Mode=TwoWay}" />
                                     <Button Style="{StaticResource RoundButtonStyle}"
-                                            Visibility="{Binding Last, 
+                                                Grid.Column="1"
+                                                Visibility="{Binding Last, 
                                                          Converter={StaticResource BoolToVisibility}}"
-                                            Command="{Binding Path=AddCommand,
+                                                Command="{Binding Path=AddCommand,
                                                       Source={StaticResource PageModel}}">
                                         <SymbolIcon Symbol="Add"/>
                                     </Button>
                                     <Button Style="{StaticResource RoundButtonStyle}"
+                                            Grid.Column="2"
                                             CommandParameter="{Binding}"
                                             Visibility="{Binding NotFirst,
                                                          Converter={StaticResource BoolToVisibility}}"
@@ -94,14 +105,15 @@
                                                       Source={StaticResource PageModel}}">
                                         <SymbolIcon Symbol="Delete"/>
                                     </Button>
-                                </StackPanel>
+                                </Grid>
+
                             </Grid>
                         </DataTemplate>
 
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </ScrollViewer>
-            <Grid Grid.Row="2">
+            <Grid Grid.Row="2" Background="#5555" Padding="0,10,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="Auto"/>
@@ -109,22 +121,22 @@
                 </Grid.ColumnDefinitions>
                 <Grid Column="0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*"/>
-                        <ColumnDefinition Width="6*"/>
-                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="33*"/>
+                        <ColumnDefinition Width="34*"/>
+                        <ColumnDefinition Width="33*"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Correctness rate:"
                                TextWrapping="WrapWholeWords"
                                TextTrimming="None"
-                               FontSize="20"
+                               FontSize="18"
                                Grid.Column="0"
                                HorizontalAlignment="Right"
-                               Margin="5"
+                               Margin="5,5,5,15"
                                VerticalAlignment="Center"/>
                     <Slider Maximum="100" 
-                            MinWidth="100"
                             Minimum="75"
                             StepFrequency="5"
+                            HorizontalAlignment="Stretch"
                             Grid.Column="1"
                             VerticalAlignment="Center"
                             Value="{Binding Path=CorrectnessRate, Mode=TwoWay}"
@@ -132,7 +144,7 @@
                             Style="{StaticResource CustomSlider}"/>
                     <TextBlock Text="{Binding CorrectnessRateText}"
                                Grid.Column="2"
-                               FontSize="24"
+                               FontSize="18"
                                Margin="5"
                                HorizontalAlignment="Left"
                                VerticalAlignment="Center"/>
